Changes for 1.7.0

 - [ZBX-1046] add DBPort description; note that socket is used for MySQL if DBHost is localhost (Richlv)
 - [DEV-411] database cache is permanently enabled (Sasha)
 - [ZBX-482] fix incorrect MySQL userparameter keys in template (Richlv)
 - [ZBX-298] fix missing item parameter descriptions and examples; unify active/passive item descriptions (Richlv)
 - [DEV-420] fixed "Add host" operation for auto-discovered devices (Sasha)
 - [DEV-423] added filtering of the Windows Event Log by Type, Source and Event ID on the server side (Dmitry)
 - [DEV-423] added filtering of the Windows Event Log by Type, Source and Event ID on the agent side (Dmitry)
 - [DEV-9] added support of function macros (Sasha)
 - [DEV-422] updated the list of supported checks in the item configuration form (Dmitry)
 - [DEV-421] added additional parameter `maxlines' to `log[]' and `eventlog[]' checks (Dmitry)
 - [DEV-137] add AIX initscript for agentd by Faustino Ramos (Richlv)
 - [DEV-420] auto-discovery of multiple-IP devices (Sasha)
 - [DEV-419] added support of Basic Authentication for Web monitoring (Dmitry)
 - [DEV-325] new check for DNS 'net.tcp.dns.query' was added; added additional 'type' parameter (Dmitry)
 - [DEV-416] new simple check 'icmppingloss' added; ICMP checks now support additional parameters (Dmitry)
 - [DEV-9] added support of global, template and host level macros on the server side (Sasha)
 - [DEV-414] created basic man pages for all Zabbix binaries (Alexei)
 - [DEV-340] auto registration of active agents (Sasha)
 - [DEV-137] sql file "data.sql" was fixed, a default value was added (Dmitry)
 - [DEV-137] sql file "data.sql" was fixed, some default values were added (Dmitry)
 - [DEV-412] improved timeline in charts (Artem)
 - [DEV-353] Discovery: added support of IP masks (Sasha) 
 - [DEV-137] poller will continue processing of other items after enabling a host (Alexei)
 - [DEV-137] modified Makefile to use tr instead of sed for better compatibility (Alexei)